Add detailed item extraction and CSV generation
- Updated `main.py` to fetch item details from eBay API using `DetailLevel` set to `ReturnAll`.
- Created `table.py` to parse XML data and generate a CSV file with comprehensive item details.
- Extracted additional fields.
- Ensured HTML tags are stripped from descriptions.
- Handled missing elements gracefully to avoid runtime errors.
- Updated `.gitignore` to exclude unnecessary files.

--- a/.gitignore
+++ b/.gitignore
@@ -118,9 +118,11 @@ dmypy.json
 # VS Code
 .vscode/
 
-# Output files
-output.txt
-items.txt
+# .txt files
+*.txt
 
 # Config files
 config.ini
+
+# .csv files
+*.csv
